--- a/style.css
+++ b/style.css
@@ -606,7 +606,7 @@ ul.multi-column-dropdown li a:hover {
 /*-- carousel-slider --*/
 
 .carousel-item.item1 {
-    background: url(b1.jpg) no-repeat center;
+    background: url(../b1.jpg) no-repeat center;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -615,7 +615,7 @@ ul.multi-column-dropdown li a:hover {
 }
 
 .carousel-item.item2 {
-    background: url(b2.jpg) no-repeat center;
+    background: url(../b2.jpg) no-repeat center;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -624,7 +624,7 @@ ul.multi-column-dropdown li a:hover {
 }
 
 .carousel-item.item3 {
-    background: url(b3.jpg) no-repeat center;
+    background: url(../b3.jpg) no-repeat center;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -633,7 +633,7 @@ ul.multi-column-dropdown li a:hover {
 }
 
 .carousel-item.item4 {
-    background: url(b4.jpg) no-repeat center;
+    background: url(../b4.jpg) no-repeat center;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -1922,7 +1922,7 @@ td.invert-image a img {
 .close1,
 .close2,
 .close3 {
-    background: url('../images/close_1.png') no-repeat 0px 0px;
+    background: url('../close_1.png') no-repeat 0px 0px;
     cursor: pointer;
     width: 28px;
     height: 28px;
